A few new problems

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -2,7 +2,7 @@ style = defaultWithAlign
 
 docstrings                 = ScalaDoc
 maxColumn                  = 120
-rewrite.rules              = [RedundantBraces, RedundantParens, SortImports]
+rewrite.rules              = [RedundantParens, SortImports]
 spaces.inImportCurlyBraces = true
 indentOperator             = spray
 unindentTopLevelOperators  = true
